spent a fair while achieving nothing with tryin to make a scroll animation on the border of the sidenavbar, then spent a long while trying to fix sidenavbar overlapping footer when the height of the window was small. The latter was an easy fix with position sticky and float right. Got a bit side tracked with responsiveness but it seems good now. Break points are 1100px and 860px.

--- a/src/components/pages/home/home.css
+++ b/src/components/pages/home/home.css
@@ -1,5 +1,5 @@
 .home-container {
-  margin: 0 25%;
+  margin: 0 20%;
 }
 .home-section {
   margin: 0 10%;
@@ -12,7 +12,8 @@
   text-align: center;
   font-size: 2.5rem;
   background-color: white;
-  margin: 20px 0;
+  margin: 20px auto;
+  width: 200px;
 }
 .home-subtitle {
   padding: 10px 0;
@@ -21,4 +22,22 @@
 .home-paragraph {
   margin: 10px 0;
   line-height: 2em;
+}
+
+@media only screen and (max-width: 1100px) {
+  .home-container {
+    margin: 0 40% 0 0
+  }
+  .home-section {
+    margin: 0 5%
+  }
+}
+
+@media only screen and (max-width: 860px) {
+  .home-container {
+    margin: 0;
+  }
+  .home-section {
+    margin: 0 2.5%
+  }
 }
